--- a/cool-places-frontend/dockerfile
+++ b/cool-places-frontend/dockerfile
@@ -4,7 +4,7 @@ FROM python:3.9-slim-buster
 
 WORKDIR /app
 
-COPY main.py .
+COPY frontmain.py .
 COPY requirements.txt .
 
 
@@ -17,4 +17,4 @@ RUN pip install  -r requirements.txt
 EXPOSE 8501
 
 
-CMD ["streamlit", "run", "main.py", "--server.port", "8501","0.0.0.0"]
+CMD ["streamlit", "run", "frontmain.py", "--server.port", "8501","0.0.0.0"]
